cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(kuafu VERSION 0.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS_DEBUG "-o0 -g3 -Wall -Wnon-virtual-dtor -fsized-deallocation -Wno-deprecated-declarations")
set(CMAKE_CXX_FLAGS_RELEASE "-o3 -g0 -Wall -Wnon-virtual-dtor  -fsized-deallocation -Wno-deprecated-declarations")

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("-- DEBUG Build")
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_DEBUG})
    add_definitions(-DVK_VALIDATION)
    add_definitions(-D_DEBUG)
else ()
    message("-- RELEASE Build")
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_RELEASE})
    add_definitions(-DNDEBUG)
endif ()

find_package(Vulkan REQUIRED)
find_package(Ktx REQUIRED)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})

#set(KTX_FEATURE_TESTS OFF)
#set(KTX_FEATURE_TOOLS OFF)
#set(KTX_FEATURE_LOADTEST_APPS OFF)
#add_subdirectory(3rd_party/KTX-Software)
#add_subdirectory(3rd_party/SDL)
#
#include_directories(3rd_party/SDL/include)
#include_directories(3rd_party/KTX-Software/include)

file(GLOB_RECURSE RENDERER_SRC "src/*")

include_directories("include")
include_directories("include/external")
add_library(kuafu SHARED ${RENDERER_SRC})
target_link_libraries(kuafu vulkan ktx SDL2)
target_precompile_headers(kuafu PUBLIC "${PROJECT_SOURCE_DIR}/include/stdafx.hpp")

add_compile_definitions(KF_ASSETS_PATH="${PROJECT_SOURCE_DIR}/assets/")
#add_compile_definitions(KF_PATH_TO_LIBRARY="${PROJECT_SOURCE_DIR}/build/bin/${BUILD_PATH}/")
add_compile_definitions(KF_GLSLC_PATH="/usr/bin/glslc")
include(${PROJECT_SOURCE_DIR}/example/CMakeLists.txt)
